Changes in Cover-img, size responsive

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         </section>
 
         <!-- carousel -->
-        <section class="container my-5" id="images">
-            <h2 class="display-5 fw-bold text-center p-5">#BienestarEsElCamino</h2>
+        <section class="container my-5 text-center" id="images">
+            <h2 class="display-5 fw-bold py-5">#BienestarEsElCamino</h2>
 
             <section id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-bs-ride="carousel">
                 <div class="carousel-inner">
