Resposive footer-logo fixed

--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@
         </ul>
 
 
-        <div class="d-flex mx-auto mb-md-0 justify-content-center mb-4">
+        <div class="d-flex mx-auto mb-md-0 justify-content-center mb-0">
             <p class="text-center">Portal Hidalgo #1, Col. Centro 58570 Panindicuaro, Michoacán de Ocampo, Mexico
                 <br>Teléfono: 454-361-0097
             </p>
         </div>
-        <a href="https://panindicuaro.gob.mx/"><img class="Nav-logo m-auto" src="assets/img/logo.png"
+        <a href="https://panindicuaro.gob.mx/"><img class="Footer-logo m-auto" src="assets/img/logo.png"
                 alt="Panindicuaro logo" /></a>
 
     </footer>
