--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <!-- info -->
         <section class="container text-center my-5" id="info">
-            <h1 class="display-5 fw-bold text-uppercase">Invitación al segundo informe de gobierno</h1>
+            <h1 class="display-5 fw-bold text-uppercase hyphens-manual">Invitación al segundo informe de gobierno</h1>
             <div class="row pt-5">
                 <!-- lugar, fecha y hora,  -->
                 <div class="col-lg-4 col-sm-12">
@@ -102,16 +102,16 @@
             <div class="table-responsive">
                 <table class="table table-borderless">
                     <tr class="display-6">
-                        <td class="table-td"><span id="days"></span></td>
+                        <td class="table-td "><span id="days"></span></td>
                         <td class="table-td"><span id="hours"></th>
                         <td class="table-td"><span id="minutes"></span></td>
-                        <td class="table-td"><span id="seconds"></span></td>
+                        <td class="table-td hidde-mobile"><span id="seconds"></span></td>
                     </tr>
                     <tr class="">
-                        <th class="table-th">Días</th>
-                        <th class="table-th">Horas</th>
-                        <th class="table-th">Minutos</th>
-                        <th class="table-th">Segundos</th>
+                        <th class="table-th hyphens-manual">Días</th>
+                        <th class="table-th hyphens-manual">Horas</th>
+                        <th class="table-th hyphens-manual">Minutos</th>
+                        <th class="table-th hidde-mobile hyphens-manual">Segundos</th>
                     </tr>
                 </table>
             </div>
